--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-datepicker": "^4.14.1",
     "react-dom": "^18.2.0",
     "react-icons": "^4.9.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.2",
     "web-vitals": "^2.1.4"
   },
